--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,14 @@
 	<version>1.0.2-SNAPSHOT</version>
 	<properties>
 		<spring.ws.version>2.4.0.RELEASE</spring.ws.version>
-		<log4j.version>1.2.16</log4j.version>
 		<context.path>xdrmessagevalidator</context.path>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.36</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.ws.commons.axiom</groupId>
