--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<properties>
 		<spring.ws.version>2.4.0.RELEASE</spring.ws.version>
 		<context.path>xdrmessagevalidator</context.path>
+		<logback.version>1.2.3</logback.version>
 	</properties>
 
 	<dependencies>
